# rules_claude

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
claude/: BUILD.bazel  defs.bzl
claude/private/: run.bzl  test.bzl
