# Root BUILD file for rules_claude

load("//claude:defs.bzl", "claude_run", "local_auth_flag")

# Default target for `bazel run @rules_claude`
claude_run(
    name = "rules_claude",
    prompt = "",
    interactive = True,
    visibility = ["//visibility:public"],
)

local_auth_flag(
    name = "local_auth",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
